# qcore

./: .coverage 2  .gitignore  .markdown-link-check.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  MANIFEST.in  README.md  SECURITY.md  docs.json  index.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  executive-summary.md  index.md  interop.md  publishing.md  quickstart.md  sdk-standards.md
docs/architecture/: ai-agent-architecture.md  compiler-pipeline.md  ir-strategy.md  plugin-system.md  qcore-overview.md  qplanck-labs.md  runtime-and-backends.md
docs/governance/: open-source-governance.md
docs/research/: competitive-matrix.md  current-alpha-audit.md  ecosystem-audit.md  qbraid-analysis.md  source-register.md
docs/reviews/: phase-0-review.md
docs/roadmap/: implementation-backlog.md  mvp-definition.md  qcore-roadmap.md
docs/security/: threat-model.md
docs/strategy/: qcore-positioning.md
examples/: bell_state.py  bell_state.qasm  qiskit_roundtrip.py
qplanck/: divisions.md  overview.md
rfcs/: 0001-qcore-charter.md  0002-language-and-repository-strategy.md  0003-intermediate-representation.md  0004-backend-interface.md
src/qplanck/: __init__.py  circuit.py  cli.py  compiler.py  draw.py  errors.py  gates.py  interop.py  ir.py  pulse.py  py.typed  qasm3.py  qir.py  qiskit_adapter.py  results.py  simulator.py
tests/: test_circuit.py  test_cli_examples.py  test_compiler.py  test_interop_report.py  test_ir.py  test_pulse.py  test_qasm3.py  test_qir.py  test_qiskit_adapter.py  test_simulator.py  test_version.py
tools/: check_docs.py
tph/: overview.md
