[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qplanck"
version = "0.1.0a1"
description = "QCore by QPlanck Labs: quantum circuit debugging and interoperability."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "QPlanck Labs" }
]
keywords = ["quantum", "qasm", "qiskit", "simulator", "debugger"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<2.5",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
qasm = []
dev = [
  "coverage[toml]>=7.0",
  "hypothesis>=6.0",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
qplanck = "qplanck.cli:main"

[project.urls]
Homepage = "https://github.com/qplanck-labs/qcore"
Issues = "https://github.com/qplanck-labs/qcore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["qplanck"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "qiskit"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/qplanck"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
