[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qplanck"
version = "0.2.0a1"
description = "QCore by QPlanck: inspectable circuits, deterministic compilation, QIR export, and pulse calibration contracts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "QPlanck Labs" }
]
keywords = ["quantum", "compiler", "qasm", "qir", "pulse", "qiskit", "simulator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24,<2.5",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0,<3"]
qir-validation = ["pyqir>=0.12,<0.13"]
dev = [
  "coverage[toml]>=7.0",
  "hypothesis>=6.0",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
qplanck = "qplanck.cli:main"

[project.urls]
Homepage = "https://github.com/qplanck/qcore"
Documentation = "https://github.com/qplanck/qcore/tree/main/docs"
Issues = "https://github.com/qplanck/qcore/issues"
Changelog = "https://github.com/qplanck/qcore/blob/main/CHANGELOG.md"
Source = "https://github.com/qplanck/qcore"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qplanck = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["qplanck"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "qiskit"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/qplanck"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
